// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ToolbarFieldExport Component should aggregate export status, polling status with a hook, basic status 1`] = `
{
  "isProductPending": false,
  "pendingProductFormats": [],
}
`;

exports[`ToolbarFieldExport Component should aggregate export status, polling status with a hook, polling completed 1`] = `
{
  "isProductPending": false,
  "pendingProductFormats": [],
}
`;

exports[`ToolbarFieldExport Component should aggregate export status, polling status with a hook, polling status 1`] = `
{
  "isProductPending": true,
  "pendingProductFormats": [
    "dolorSit",
  ],
}
`;

exports[`ToolbarFieldExport Component should allow export service calls on existing exports: existingExports 1`] = `
[
  [
    {
      "autoDismiss": false,
      "description": <div
        aria-live="polite"
      >
        t(curiosity-toolbar.notifications_export_completed_description_existing, {"context":"completed","count":1,"completed":1,"pending":0})
        <div
          style={
            {
              "paddingTop": "0.5rem",
            }
          }
        >
          <Button
            autoFocus={true}
            data-test="exportButtonConfirm"
            onClick={[Function]}
            variant="primary"
          >
            t(curiosity-toolbar.button, {"context":"yes"})
          </Button>
           
          <Button
            data-test="exportButtonCancel"
            onClick={[Function]}
            variant="plain"
          >
            t(curiosity-toolbar.button, {"context":"no"})
          </Button>
        </div>
      </div>,
      "dismissable": false,
      "swatchId": "swatch-exports-status",
      "title": "t(curiosity-toolbar.notifications_export_completed_title, {"context":"existing","count":1,"testId":"exportNotification-existing-confirmation"})",
    },
  ],
]
`;

exports[`ToolbarFieldExport Component should allow export service calls: createExport 1`] = `
[
  {
    "type": "return",
    "value": [
      {
        "id": "mock-product-id",
        "isPending": true,
        "isSelectUpdated": true,
        "pending": [
          {
            "format": undefined,
          },
        ],
        "type": "SET_PLATFORM_EXPORT_STATUS",
      },
      "dispatch => Promise.resolve(dispatch(...args))",
    ],
  },
]
`;

exports[`ToolbarFieldExport Component should allow service calls on user confirmation: confirmation 1`] = `
[
  [
    [
      "dolor",
      "sit",
    ],
  ],
  [
    [
      "lorem",
      "ipsum",
      "dolor",
      "sit",
    ],
    {
      "pendingCallback": [Function],
    },
  ],
]
`;

exports[`ToolbarFieldExport Component should expose an export polling status confirmation, app loaded, no data 1`] = `
{
  "dispatch": [],
  "notification": [],
}
`;

exports[`ToolbarFieldExport Component should expose an export polling status confirmation, app not loaded 1`] = `
{
  "dispatch": [],
  "notification": [],
}
`;

exports[`ToolbarFieldExport Component should expose an export polling status confirmation, completed notification 1`] = `
{
  "dispatch": [
    [
      [
        {
          "completed": [
            {
              "fileName": "dolorSitFileName",
              "id": "dolorSit",
            },
          ],
          "failed": [],
          "id": "loremIpsum",
          "isAnything": true,
          "isCompleted": true,
          "isFailed": false,
          "isPending": false,
          "pending": [],
          "type": "SET_PLATFORM_EXPORT_STATUS",
        },
      ],
    ],
  ],
  "notification": [
    [
      {
        "description": "t(curiosity-toolbar.notifications_export_completed, {"context":"description","fileName":"dolorSitFileName"}, [object Object])",
        "swatchId": "swatch-exports-individual-status",
        "title": "t(curiosity-toolbar.notifications_export_completed, {"context":"title","testId":"exportNotification-individual-completed"})",
        "variant": "success",
      },
    ],
  ],
}
`;

exports[`ToolbarFieldExport Component should expose an export polling status confirmation, failed notification 1`] = `
{
  "dispatch": [
    [
      [
        {
          "completed": [],
          "failed": [
            {
              "fileName": "dolorSitFileName",
              "id": "dolorSit",
            },
          ],
          "id": "loremIpsum",
          "isAnything": true,
          "isCompleted": false,
          "isFailed": true,
          "isPending": false,
          "pending": [],
          "type": "SET_PLATFORM_EXPORT_STATUS",
        },
      ],
    ],
  ],
  "notification": [
    [
      {
        "description": "t(curiosity-toolbar.notifications_export_failed, {"context":"description","fileName":"dolorSitFileName"}, [object Object])",
        "swatchId": "swatch-exports-individual-status",
        "title": "t(curiosity-toolbar.notifications_export_failed, {"context":"title","testId":"exportNotification-individual-failed"})",
        "variant": "danger",
      },
    ],
  ],
}
`;

exports[`ToolbarFieldExport Component should expose an export polling status confirmation, multi-status no notification 1`] = `
{
  "dispatch": [
    [
      [
        {
          "completed": [
            {
              "fileName": "loremIpsumFileName",
              "id": "loremIpsum",
            },
          ],
          "failed": [
            {
              "fileName": "dolorSitFileName",
              "id": "dolorSit",
            },
          ],
          "id": "loremIpsum",
          "isAnything": true,
          "isCompleted": false,
          "isFailed": false,
          "isPending": true,
          "pending": [
            {
              "fileName": "helloWorldFileName",
              "id": "helloWorld",
            },
          ],
          "type": "SET_PLATFORM_EXPORT_STATUS",
        },
      ],
    ],
  ],
  "notification": [],
}
`;

exports[`ToolbarFieldExport Component should expose an export polling status confirmation, pending notification 1`] = `
{
  "dispatch": [],
  "notification": [
    [
      {
        "swatchId": "swatch-exports-individual-status",
        "title": "t(curiosity-toolbar.notifications_export_pending, {"context":"title","testId":"exportNotification-individual-pending"})",
        "variant": "info",
      },
    ],
  ],
}
`;

exports[`ToolbarFieldExport Component should expose an export polling status rejection: status rejection 1`] = `
[
  [
    {
      "description": "t(curiosity-toolbar.notifications_export_error, {"context":"description"})",
      "title": "t(curiosity-toolbar.notifications_export_error, {"context":"title","testId":"exportNotification-individual-error"})",
      "variant": "warning",
    },
  ],
]
`;
